# audit

./: CLAUDE.md  Cargo.toml  README.md  init.sh
docs/: llmguide.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  project.rs  types.rs
src/commands/: decision.rs  init.rs  log.rs  mod.rs  problem.rs  recent.rs  reindex.rs  search.rs  setup_project.rs  stats.rs  sync.rs  task.rs
src/vault/: entry.rs  filter.rs  index.rs  markdown.rs  mod.rs  parser.rs  search.rs  task.rs  task_filter.rs  task_index.rs
